--- a/Android_note/第一行代码-第二版-随记.md
+++ b/Android_note/第一行代码-第二版-随记.md
@@ -2,7 +2,7 @@
 
 **该文章为阅读《第一行代码（第二版）》时的一些随记，用于复习与回顾**
 
-<!--more-->
+
 
 ## R文件
 
@@ -698,7 +698,7 @@ dependencies {
 
 
 
-###### **指定一个Adapter(适配器)和一个LayoutManager**
+###### 指定一个Adapter(适配器)
 
 使用 RecyclerView ，必须指定一个Adapter(适配器)和一个LayoutManager（可参考实体书P124，电子书P134）
 
@@ -712,7 +712,7 @@ dependencies {
 
     <img src="第一行代码-第二版-随记\image-20201218184437008.png" alt="image-20201218184437008" style="zoom:80%;" />
 
-+ 构造函数把要展示的数据源传进来，并赋值给一共全局变量用于操作
++ 构造函数把要展示的数据源传进来，并赋值给全局变量用于操作
 
   <img src="第一行代码-第二版-随记\image-20201218210729928.png" alt="image-20201218210729928" style="zoom:80%;" />
 
@@ -720,13 +720,15 @@ dependencies {
 
 + 由于新建的类是继承自RecyclerView.Adapter，所以就必须重写**onCreateViewHolder()、onBindViewHolder()**和**getItemCount()**这三个方法
 
-  + **onCreateViewHolder()**方法用于创建ViewHolder实例
+  + **onCreateViewHolder()**方法用于创建ViewHolder实例**（.inflate()方法设定了Item的布局样式）**
 
   + **onBindViewHolder()**方法用于对RecyclerView子项的数据进行赋值，**该方法会在每个子项被滚动到屏幕内的时候执行**
 
   + **getItemCount()**方法告诉RecyclerView一共有多少个子项，直接返回数据源的长度就可以了
 
     <img src="第一行代码-第二版-随记\image-20201218205108949.png" alt="image-20201218205108949" style="zoom:80%;" />
+
+[探究RecyclerView适配器中重载函数的作用以及调用顺序](https://blog.csdn.net/weixin_43851639/article/details/90139476)
 
 
 
@@ -772,7 +774,7 @@ dependencies {
 
 **完整示例代码：**
 
-![image-20201207221833746](第一行代码-第二版-随记\image-20201207221833746-1614397676496.png)
+<img src="第一行代码-第二版-随记\image-20201207221833746-1614397676496.png" alt="image-20201207221833746" style="zoom:80%;" />
 
 ![image-20201207221848969](第一行代码-第二版-随记\image-20201207221848969-1614397676496.png)
 
